fix dark mode finally !
Dark mode works well now.

the HTML handles the root variables, instead of the root selector for now. Need to see how to handle that later on.
In any case it's valid and global as it should be for variables of the dark mode.

--- a/LTS-flex-theme.css
+++ b/LTS-flex-theme.css
@@ -11,21 +11,30 @@ exceptional cases below. Computers use the last mentioned CSS setting.
 
 /* Color variables for faster modifications and dark mode switch.  */
 
-:root {
+/* Color variables for faster modifications and dark mode switch.  */
+
+html {
+
 --color-html: #F9F9F9 ;
 --color-body: #fdfdfd ;
 --color-text: #051105 ;
+--color-link: #1122D8 ;
 --color-selected-text: #000 ;
 --color-selected-bg: #CF7 ;
+
 }
 
-/* Dark mode colors.  */
-@media (prefers-color-scheme: dark) , #dark-mode-switch:checked {
---color-html: #333 ;
---color-body: #444 ;
---color-text: #eee ;
+/* Dark mode colors activated by switch on page */
+
+html.dark { 
+
+--color-html: #222 ;
+--color-body: #282525 ;
+--color-text: #ddd ;
 --color-selected-text: #000 ;
 --color-selected-bg: #CF7 ;
+--color-link: #4fbcff ;
+
 }
 
 
@@ -110,7 +119,8 @@ button, input[type=submit] {
 
 button, input[type=submit] { border:1px; border-radius: 7px;}
 
-a:hover { border-bottom: 2px dashed #00b }
+a:link, a:visited {color : var(--color-link) ; text-decoration: none;}
+a:hover { border-bottom: 2px dashed #00b ;}
 
 button, input:hover, select:hover, textarea:hover {
   box-shadow: 0.5em 0.5em 0.7em #aaa; cursor: pointer; 
